--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Movie Log</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <body class="background">
     <div class = "container">
-        <h1 class ="text-center"> <img src="images/icon.png"> My Moive Log </h1>
+        <h1 class ="text-center"> <img src="images/icon.png"> My Movie Log </h1>
         <div class="card p-4 mb-4 shadow-1g">
             <h2 class="text-center">Add a New Movie</h2>
             <form id="movieForm">
@@ -55,9 +55,9 @@
     </div>
     <div class="input-group">
         <input type="text" id="searchInput" class="form-control" placeholder="Search by Title or Director">
-        <button class="btn btn-outline-secondary" type="button" id="searchBtn">
-            <i class="fas fa-search"></i>
-        </button>
+<!--        <button class="btn btn-outline-secondary" type="button" id="searchBtn">-->
+<!--            <i class="fas fa-search"></i>-->
+<!--        </button>-->
     </div>
 
     <table class="table movie-table">
