--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="sort-options text-center">
         <button class="btn btn-secondary" onclick="sortMovies('title')">Sort by Title</button>
         <button class="btn btn-secondary" onclick="sortMovies('director')">Sort by Director</button>
-        <button class="btn btn-secondary" onclick="sortMovies('releaseDate')">Sort by Date</button>
+        <button class="btn btn-secondary" onclick="sortMovies('watch date')">Sort by Date</button>
         <button class="btn btn-secondary" onclick="sortMovies('status')">Sort by Status</button>
         <button class="btn btn-secondary" onclick="sortMovies('rating')">Sort by Rate</button>
     </div>
@@ -63,7 +63,7 @@
             <th>Cover</th>
             <th>Title</th>
             <th>Director</th>
-            <th>Release Date</th>
+            <th>Watch Date</th>
             <th>Status</th>
             <th>Rating</th>
             <th>Actions</th>
